[tool.poetry]
name = "huggingface-sandbox"
version = "0.1.0"
repository = "https://github.com/DmitriySevkovych/huggingface-sandbox"
description = "Experiments with HuggingFace models (transformers, diffusers, ...)"
authors = ["Dmitriy Sevkovych <dmitriy@sevkovych.com>"]
readme = "README.md"
packages = [{include = "sandbox"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
transformers = "^4.39.3"
datasets = "^2.18.0"
pillow = "^10.3.0"
diffusers = "^0.27.2"
accelerate = "^0.29.3"
scipy = "^1.13.0"
safetensors = "^0.4.3"
torch = { version = ">=2.2.2+cu118", source = "pytorch" }
torchvision = { version = ">=0.15.0+cu118", source = "pytorch" }
peft = "^0.10.0"
pandas = "^2.2.2"
bitsandbytes = "^0.43.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.12.0"
tomli = "^2.0.1"
ipykernel = "^6.27.1"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
typing-extensions = "^4.11.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.scripts]
diffuser = "sandbox.main:diffuser"
transformer = "sandbox.main:transformer"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
